<resources>
    <string name="app_name">TalentedInc</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_more_items">Load more data</string>
    <string name="title_activity_signin">SigninActivity</string>

    <!--************************************* Asmaa **********************************************-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_offerd">Offer Courses</string>
    <string name="register">Register</string>
    <string name="comment">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="rate">rate</string>
    <string name="catgories">Categories</string>
    <string name="cities">Cities</string>
    <string name="ok">OK</string>
    <string name="by">By:</string>
    <string name="workspace">Workspace :</string>
    <string name="location">Location :</string>
    <string name="Desc">Description :</string>
    <string name="StartD">Start Date :</string>
    <string name="EndD">End Date :</string>
    <string name="duration">Duration :</string>
    <!--*********************************************************************************************-->

    <!--................................mina......................................-->
    <string name="facebook_app_id">2119638034933373</string>
    <string name="fb_login_protocol_scheme">fb2119638034933373</string>
    <string name="first_name_place_holder">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="phone_hint">Phone</string>
    <string name="male_radio_btn">Male</string>
    <string name="female_radio_btn">Female</string>
    <string name="birthdate_btn">Date Of Birth</string>
    <string name="goto_signup_btn">Sign Up</string>
    <string name="signup_btn">Sign Up</string>
    <string name="title_activity_button_navigation">ButtonNavigationActivity</string>
    <string name="email_label">E-mail Address</string>
    <string name="password_label">Password</string>
    <string name="phone_label">Phone Number</string>
    <string name="city_label">City</string>
    <string name="next_btn">Next</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="gender_label">Gender</string>
    <string name="request_button">Request</string>
    <string name="email_signup_hint">example@exampl.com</string>
    <string name="password_signup_hint">******</string>
    <string name="phone_sign_up_hint">201*********</string>
    <string name="first_name_hint">first name ...</string>
    <string name="last_name_signup_hint">last name .....</string>
    <string name="course_creator">Creator :</string>
    <string name="no_of_applicants">No. of applicants :</string>
    <string name="register_btn">Register</string>
    <string name="your_offered_courses_title">Your Offered Courses</string>
    <string name="requests_on_offered_course_title">Requests On Your Course</string>
    <!--...........................................................................-->
    <!--..................................alaa......................................-->

    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="loading">Loading</string>
    <string name="CourseName">Course Name :</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="LE">LE</string>
    <string name="Pick">Pick</string>
    <string name="PickE">Pick</string>
    <string name="Cost">Cost</string>
    <string name="NumberOfApplicants" />
    <string name="numberOfApplicants">Number of Applicants</string>
    <string name="Description">Description</string>
    <string name="Category">Category</string>
    <string name="Create">Create</string>
    <string name="courseDuration">Duration</string>
    <!--...............................Alaa................................................-->

    <string name="OpenFrom">Open from</string>
    <string name="openTime">8:00 AM</string>
    <string name="To">to</string>
    <string name="closingTime">10:00 PM</string>
    <string name="closed">Closed</string>
    <string name="holidays">Friday,Saterday</string>
    <string name="BasicInfo">Basic Info</string>
    <string name="SocialMedia">Social media</string>


    <!--...............................................................................-->
    <!--...................................Shimaa......................................-->

    <string name="SelectYourInterests">Select Your Interests</string>

    <!--...............................................................................-->

    <string name="Email">Email</string>
    <string name="EmailAddress">E-mail Address</string>
    <string name="SignIn">Sign In</string>
    <string name="ForgetPassword">Forget Password ?</string>
    <string name="OrLoginWith">Or sign in with</string>
    <string name="comment_hint">Write a comment .....</string>
    <string name="search">Search ...</string>
    <string name="title_activity_main2p">Main2pActivity</string>
    <string name="accept_request_btn">Accept</string>
    <string name="course_rate">Rate course:</string>
    <string name="instructor_rate">Rate Instructor</string>
    <string name="workspace_rate">Rate Workspace</string>
    <string name="PhotoAlbum">Photo Album</string>

    <string name="my_courses_btn">Go To My Offered Courses</string>
    <string name="SignUpButton">Sign Up</string>
    <string name="title_register">Registered</string>

    <!--................................................................................-->

</resources>
