<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="inc.talentedinc.view.fragmnts.SecondCreateCourse">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_below="@+id/cost"
        android:layout_marginEnd="260dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/numberOfApplicants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/numberOfApplicants" />

    <EditText
        android:id="@+id/NumOfApplicants"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/description"
        android:layout_width="357dp"
        android:layout_height="42dp"
        android:layout_alignBottom="@+id/textView8"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create"
        android:layout_alignBottom="@+id/create"
        android:layout_marginEnd="339dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/Category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumOfApplicants"
        tools:text="@string/Category" />



    <Spinner
        android:id="@+id/categories_snippir"
        android:layout_width="357dp"
        android:layout_height="38dp"
        android:layout_alignBottom="@+id/textView9"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginEnd="325dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories_snippir"
        tools:text="@string/Description" />




</android.support.constraint.ConstraintLayout>
